--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    background: linear-gradient(to right, #00AAFF, #00FF6C);
+    background: linear-gradient(to right, #BDC3C7, #2C3E50);
 }
 
 .calculator-grid {
